Change in #info section, and align-items:center to fix #info

--- a/styles/scss/new_home.scss
+++ b/styles/scss/new_home.scss
@@ -138,6 +138,7 @@ body {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
+		align-items: center;
 
 		//  HELLO Section  //
 		#intro {
